# enigma_cli

./: README.md  pyproject.toml  requirements.txt
src/controllers/: DatabaseCtrl.py
src/enigma_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/misc/: database_installation_setup.py
src/tui/: tui_interface.py
src/tui/screens/: error_screen.py  login_screen.py  welcome_screen.py
