[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enigma_cli"
version = "v1.1.1"
description = '''A reliable Credentials Manager CLI Application: it targets CLI environments,
                 via its beautiful TUI interface and respectable encrypton practices.'''
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Túlio Horta", email = "tuliofh01@gmail.com" }
]
dependencies = [
  "requests>=2.32,<3",
  "PyYAML>=6,<7",
  "PyQt5>=5.15,<6",
  "Pillow>=10,<11"
]
[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "mypy>=1,<2"
]
[project.scripts]
enigma = "enigma_cli.__main__:main"
[tool.setuptools]
package-dir = {"" = "application/src"}
[tool.setuptools.packages.find]
where = ["enigma_cli"]
include = ["enigma_cli*"]
[tool.setuptools.package-data]
enigma_cli = ["application/assets/**/*"]